@@ -1,3 +1,12 @@
+2010-12-01	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/addons/802.1X/packetfence.pm, pf/lib/pf/WebAPI.pm, 
+	pf/lib/pf/radius.pm: Now sending the whole RAD_REQUEST hash to server
+	side so we can take more proper educated guess about the hardware in
+	the proper pf::SNMP::.. modules. Will be used for SSID discovery and
+	EAP-based MAC Authentication.
+	EAP-based MAC Authentication's Connection-Type is now properly set to
+	WIRED_MAC_AUTH (was WIRED_802_1X)
+
 2010-11-29	Olivier Bilodeau <obilodeau@inverse.ca>
 	* Dropping pf/docs/PacketFence_Installation_Guide.odt: Dropping this
 	guide in favor of the Administration Guide where we took all that was
